--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
     <h1>This website is dedicated to RockPaperScissor Game
         Enjoy!!!
     </h1>
-    <button onclick="">Rock</button>
+    <button onclick="
+
+    const randomNumber = Math.random();
+
+    if (randomNumber >= 0 && randomNumber < 1/3) {
+        console.log('rock');
+    } else if ( randomNumber >= 1/3 && randomNumber < 2/3) {
+        console.log('paper');
+    } else if ( randomNumber >= 2/3 && randomNumber < 1) {
+        
+    }
+    ">Rock</button>
+
     <button>Paper</button>
+
     <button>Scissor</button>
+
     <script>
         /* Generating Computer Move */
         function pickComputerMove() {
