added score board

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
       playGame('scissors');
     ">Scissors</button>
 
+    <p class="JS-result"></p>
+    <p class="JS-moves"></p>
+    <p class="JS-score"></p>
+
     <button onclick="
       score.wins = 0;
       score.losses = 0;
       score.ties = 0;
-      localStorage.removeItem('score');
+      localStorage.removeItem('score'); updateScoreElement();
     ">Reset Score</button>
 
     <script>
@@ -30,6 +34,8 @@
         losses: 0,
         ties: 0
       };
+
+      updateScoreElement();
 
       /*
       if (!score) {
@@ -40,8 +46,8 @@
         };
       }
       */
-
-      function playGame(playerMove) {
+      
+ function playGame(playerMove) {
         const computerMove = pickComputerMove();
 
         let result = '';
@@ -84,8 +90,16 @@
 
         localStorage.setItem('score', JSON.stringify(score));
 
-        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
+        updateScoreElement();
+
+        document.querySelector('.js-result').innerHTML = result;
+
+        document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
+      }
+
+      function updateScoreElement() {
+        document.querySelector('.js-score')
+          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
 
       function pickComputerMove() {
