--- a/index.html
+++ b/index.html
@@ -1,122 +1,117 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-  </head>
-  <body>
-    <p>Rock Paper Scissors</p>
-    <button onclick="
-      playGame('rock');
-    ">Rock</button>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-    <button onclick="
-      playGame('paper');
-    ">Paper</button>
+    <!-- Animated Game Title -->
+    <p class="game-title">
+        <span>Rock</span>
+        <span>Paper</span>
+        <span>Scissors</span>
+    </p>
 
-    <button onclick="
-      playGame('scissors');
-    ">Scissors</button>
+    <!-- Game Container -->
+    <div class="game-container">
+    <button class="game-button" onclick="playGame('rock')">
+        <img src="https://icon-library.com/images/spock-icon/spock-icon-4.jpg" class="move-icon">
+        <span>Rock</span>
+    </button>
 
-    <p class="JS-result"></p>
-    <p class="JS-moves"></p>
-    <p class="JS-score"></p>
+    <button class="game-button" onclick="playGame('paper')">
+        <img src="https://icon-library.com/images/spock-icon/spock-icon-3.jpg" class="move-icon">
+        <span>Paper</span>
+    </button>
 
-    <button onclick="
-      score.wins = 0;
-      score.losses = 0;
-      score.ties = 0;
-      localStorage.removeItem('score'); updateScoreElement();
-    ">Reset Score</button>
+    <button class="game-button" onclick="playGame('scissors')">
+        <img src="https://icon-library.com/images/spock-icon/spock-icon-5.jpg" class="move-icon">
+        <span>Scissors</span>
+    </button>
+</div>
+
+
+    <!-- Result & Score Display -->
+    <p class="js-result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
+
+    <!-- Reset Button -->
+
+    <button onclick="resetScore()"class="button">
+        <svg
+          width="20"
+          viewBox="0 0 20 20"
+          height="20"
+          fill="none"
+          class="svg-icon"
+        >
+          <g stroke-width="1.5" stroke-linecap="round" stroke="#ff342b">
+            <path
+              d="m3.33337 10.8333c0 3.6819 2.98477 6.6667 6.66663 6.6667 3.682 0 6.6667-2.9848 6.6667-6.6667 0-3.68188-2.9847-6.66664-6.6667-6.66664-1.29938 0-2.51191.37174-3.5371 1.01468"
+            ></path>
+            <path
+              d="m7.69867 1.58163-1.44987 3.28435c-.18587.42104.00478.91303.42582 1.0989l3.28438 1.44986"
+            ></path>
+          </g>
+        </svg>
+        <span class="lable">Reset Score</span>
+      </button>
+
 
     <script>
-      let score = JSON.parse(localStorage.getItem('score')) || {
-        wins: 0,
-        losses: 0,
-        ties: 0
-      };
-
-      updateScoreElement();
-
-      /*
-      if (!score) {
-        score = {
-          wins: 0,
-          losses: 0,
-          ties: 0
+        let score = JSON.parse(localStorage.getItem('score')) || {
+            wins: 0,
+            losses: 0,
+            ties: 0
         };
-      }
-      */
-      
- function playGame(playerMove) {
-        const computerMove = pickComputerMove();
-
-        let result = '';
-
-        if (playerMove === 'scissors') {
-          if (computerMove === 'rock') {
-            result = 'You lose.';
-          } else if (computerMove === 'paper') {
-            result = 'You win.';
-          } else if (computerMove === 'scissors') {
-            result = 'Tie.';
-          }
-
-        } else if (playerMove === 'paper') {
-          if (computerMove === 'rock') {
-            result = 'You win.';
-          } else if (computerMove === 'paper') {
-            result = 'Tie.';
-          } else if (computerMove === 'scissors') {
-            result = 'You lose.';
-          }
-          
-        } else if (playerMove === 'rock') {
-          if (computerMove === 'rock') {
-            result = 'Tie.';
-          } else if (computerMove === 'paper') {
-            result = 'You lose.';
-          } else if (computerMove === 'scissors') {
-            result = 'You win.';
-          }
-        }
-
-        if (result === 'You win.') {
-          score.wins += 1;
-        } else if (result === 'You lose.') {
-          score.losses += 1;
-        } else if (result === 'Tie.') {
-          score.ties += 1;
-        }
-
-        localStorage.setItem('score', JSON.stringify(score));
 
         updateScoreElement();
 
-        document.querySelector('.js-result').innerHTML = result;
+        function playGame(playerMove) {
+            const computerMove = pickComputerMove();
+            let result = '';
 
-        document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
-      }
+            if (playerMove === computerMove) {
+                result = 'Tie.';
+            } else if (
+                (playerMove === 'rock' && computerMove === 'scissors') ||
+                (playerMove === 'paper' && computerMove === 'rock') ||
+                (playerMove === 'scissors' && computerMove === 'paper')
+            ) {
+                result = 'You win.';
+                score.wins += 1;
+            } else {
+                result = 'You lose.';
+                score.losses += 1;
+            }
 
-      function updateScoreElement() {
-        document.querySelector('.js-score')
-          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-      }
+            localStorage.setItem('score', JSON.stringify(score));
+            updateScoreElement();
 
-      function pickComputerMove() {
-        const randomNumber = Math.random();
-
-        let computerMove = '';
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-          computerMove = 'rock';
-        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-          computerMove = 'paper';
-        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-          computerMove = 'scissors';
+            document.querySelector('.js-result').innerHTML = result;
+            document.querySelector('.js-moves').innerHTML = `You chose <strong>${playerMove}</strong> - Computer chose <strong>${computerMove}</strong>`;
         }
 
-        return computerMove;
-      }
+        function updateScoreElement() {
+            document.querySelector('.js-score')
+                .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+        }
+
+        function resetScore() {
+            score = { wins: 0, losses: 0, ties: 0 };
+            localStorage.removeItem('score');
+            updateScoreElement();
+        }
+
+        function pickComputerMove() {
+            const moves = ['rock', 'paper', 'scissors'];
+            return moves[Math.floor(Math.random() * moves.length)];
+        }
     </script>
-  </body>
+
+</body>
 </html>
