--- a/index.html
+++ b/index.html
@@ -7,60 +7,61 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
 
-    <!-- Animated Game Title -->
-    <p class="game-title">
-        <span>Rock</span>
-        <span>Paper</span>
-        <span>Scissors</span>
-    </p>
+        <!-- Animated Game Title -->
+        <p class="game-title">
+            <span>Rock</span>
+            <span>Paper</span>
+            <span>Scissors</span>
+        </p>
 
-    <!-- Game Container -->
-    <div class="game-container">
-    <button class="game-button" onclick="playGame('rock')">
-        <img src="https://icon-library.com/images/spock-icon/spock-icon-4.jpg" class="move-icon">
-        <span>Rock</span>
-    </button>
+        <!-- Game Container -->
+        <div class="game-container">
+        <button class="game-button" onclick="playGame('rock')">
+            <img src="https://icon-library.com/images/spock-icon/spock-icon-4.jpg" class="move-icon">
+            <span>Rock</span>
+        </button>
 
-    <button class="game-button" onclick="playGame('paper')">
-        <img src="https://icon-library.com/images/spock-icon/spock-icon-3.jpg" class="move-icon">
-        <span>Paper</span>
-    </button>
+        <button class="game-button" onclick="playGame('paper')">
+            <img src="https://icon-library.com/images/spock-icon/spock-icon-3.jpg" class="move-icon">
+            <span>Paper</span>
+        </button>
 
-    <button class="game-button" onclick="playGame('scissors')">
-        <img src="https://icon-library.com/images/spock-icon/spock-icon-5.jpg" class="move-icon">
-        <span>Scissors</span>
-    </button>
-</div>
+        <button class="game-button" onclick="playGame('scissors')">
+            <img src="https://icon-library.com/images/spock-icon/spock-icon-5.jpg" class="move-icon">
+            <span>Scissors</span>
+        </button>
+    </div>
 
 
-    <!-- Result & Score Display -->
-    <p class="js-result"></p>
-    <p class="js-moves"></p>
-    <p class="js-score"></p>
+        <!-- Result & Score Display -->
+        <p class="js-result"></p>
+        <p class="js-moves"></p>
+        <p class="js-score"></p>
 
-    <!-- Reset Button -->
+        <!-- Reset Button -->
 
-    <button onclick="resetScore()"class="button">
-        <svg
-          width="20"
-          viewBox="0 0 20 20"
-          height="20"
-          fill="none"
-          class="svg-icon"
-        >
-          <g stroke-width="1.5" stroke-linecap="round" stroke="#ff342b">
-            <path
-              d="m3.33337 10.8333c0 3.6819 2.98477 6.6667 6.66663 6.6667 3.682 0 6.6667-2.9848 6.6667-6.6667 0-3.68188-2.9847-6.66664-6.6667-6.66664-1.29938 0-2.51191.37174-3.5371 1.01468"
-            ></path>
-            <path
-              d="m7.69867 1.58163-1.44987 3.28435c-.18587.42104.00478.91303.42582 1.0989l3.28438 1.44986"
-            ></path>
-          </g>
-        </svg>
-        <span class="lable">Reset Score</span>
-      </button>
-
+        <button onclick="resetScore()"class="button">
+            <svg
+            width="20"
+            viewBox="0 0 20 20"
+            height="20"
+            fill="none"
+            class="svg-icon"
+            >
+            <g stroke-width="1.5" stroke-linecap="round" stroke="#ff342b">
+                <path
+                d="m3.33337 10.8333c0 3.6819 2.98477 6.6667 6.66663 6.6667 3.682 0 6.6667-2.9848 6.6667-6.6667 0-3.68188-2.9847-6.66664-6.6667-6.66664-1.29938 0-2.51191.37174-3.5371 1.01468"
+                ></path>
+                <path
+                d="m7.69867 1.58163-1.44987 3.28435c-.18587.42104.00478.91303.42582 1.0989l3.28438 1.44986"
+                ></path>
+            </g>
+            </svg>
+            <span class="lable">Reset Score</span>
+        </button>
+    </div>
 
     <script>
         let score = JSON.parse(localStorage.getItem('score')) || {
